fix: configurator image covered

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -526,19 +526,23 @@ input[type="number"].number-input-no-arrows {
   font-size: revert;
   font-weight: revert;
 }
+
 ::-webkit-scrollbar {
-  width: 6px;
-  background: rgba(86, 86, 86, 0.1);
+  width: 5px;
+  background: transparent;
+  overflow: auto;
 }
 
 ::-webkit-scrollbar-track {
-  border: 2px solid rgba(86, 86, 86, 1);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background: transparent;
-  display: none;
+  /* display: none; */
+  overflow: auto;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #1c1c1c;
+  background: darkgrey;
   border-radius: 100px;
-  border: 1px solid #565656;
+  border: 1px solid darkgrey;
+  overflow: auto;
 }
